[package]
name = "jack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
anyhow = "1"
compact_str = "0.7.1"
im = "15.1.0"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1"
rustyline = "12.0.0"
thiserror = "1"
