[package]
name = "jack"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
anyhow = "1"
clap = { version = "4.4.0", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
enum-assoc = "1.1.0"
im-rc = "15.1.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
regex = "1"
rustyline = "17.0.1"
serde = "1.0.188"
serde_json = "1.0.105"
thiserror = "2"
